# discord-vc-status

./: package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  client.rs  config.rs  ipc.rs  log.rs  main.rs
src-tauri/src/discord_api/: api_client.rs
src-tauri/src/ipc/: auth.rs  client.rs  vc.rs
src/components/: SetActivity.tsx  UserList.tsx  VCSettings.tsx
src/types/: activity.ts  event.ts  user.ts
src/utils/: error.ts  vc.ts
